third_party/WebKit/Source/WebCore/bridge/jni/jsc/JavaClassJSC.cpp
@@ -31,7 +31,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "JSDOMWindow.h"
 #include "JavaFieldJSC.h"
-#include "JavaMethod.h"
+#include "JavaMethodJobject.h"
 #include <runtime/Identifier.h>
 #include <runtime/JSLock.h>
 
@@ -77,7 +77,7 @@ JavaClass::JavaClass(jobject anInstance)
         int numMethods = env->GetArrayLength(methods);
         for (i = 0; i < numMethods; i++) {
             jobject aJMethod = env->GetObjectArrayElement((jobjectArray)methods, i);
-            JavaMethod* aMethod = new JavaMethod(env, aJMethod); // deleted in the JavaClass destructor
+            JavaMethod* aMethod = new JavaMethodJobject(env, aJMethod); // deleted in the JavaClass destructor
             MethodList* methodList;
             {
                 JSLock lock(SilenceAssertionsOnly);
